# aoc

./: .gitignore  Cargo.toml  generate_file.sh
2020/: template.py.tpls  template.rs.tpls
2020/input/2020/: day20.txt
2020/py/: day12.py  day14.py  day15.py  day16.py  day23.py  day4.py  day7.py  day9.py
2020/py/util/: __init__.py  cpu.py  dbg.py  exercise.py  helpers.py  io.py
2020/src/: day1.rs  day10.rs  day11.rs  day12.rs  day14.rs  day15.rs  day16.rs  day17.rs  day24.rs  day3.rs  day5.rs  day6.rs  day7.rs
2021/py/: ex1.py  ex2.py  ex3.py  ex4.py  ex4.txt  ex5.py  ex6.py  ex7.py
2021/rs/: Cargo.toml
2021/rs/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  lib.rs
py/: bar.py  cpu.py  day1.py  day10.py  day11.py  day13.py  day14.py  day17.py  day18.py  day19.py  day2.py  day20.py  day21.py  day22.py  day24.py  day25.py  day5.py  day6.py  day8.py  day9.py
py/util/: __init__.py  ds.py  exercise.py  io.py
src/: day11.rs  day12.rs  day13.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day25.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
