[package]
name = "aoc"
version = "0.1.0"
authors = ["william.rudenmalmhogman <me@whn.se>"]
edition = "2018"

[lib]
bench = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
regex = "1"
lazy_static = "1.4.0"
bitvec = "0.19.4"
bit_field = "0.10.1"
rpds = "0.8.0"
itertools = "0.9.0"
array2d = "0.2.1"
